Fix code blocks not showing sometimes

--- a/apps/st2-history/modules/st2-history-child/style.less
+++ b/apps/st2-history/modules/st2-history-child/style.less
@@ -20,7 +20,7 @@
 
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.5) 0%, transparent 100%);
 
-    z-index: 3;
+    z-index: 1;
   }
 
   &:after {
